二维码添加

--- a/about/index.html
+++ b/about/index.html
@@ -1183,6 +1183,10 @@
 <div align="center">
 <img alt="微信二维码" height="auto" margin="100px" src="../img/wechat.jpg" width="20%"/>
 <img alt="QQ二维码" height="auto" margin="100px" src="../img/QQ.jpg" width="20%"/>
+</div>
+<p>上百度搜索“究尽数学”就能找到我，也可以用百度APP搜索下面二维码</p>
+<div align="center">
+<img alt="微信二维码" height="auto" margin="100px" src="../img/搜索名片.jpg" width="20%"/>
 </div></p>
     </article>
 </section>
