--- a/about/index.html
+++ b/about/index.html
@@ -1186,7 +1186,7 @@
 </div>
 <p>上百度搜索“究尽数学”就能找到我，也可以用百度APP搜索下面二维码</p>
 <div align="center">
-<img alt="微信二维码" height="auto" margin="100px" src="../img/搜索名片.jpg" width="20%"/>
+<img alt="究尽数学二维码" height="auto" margin="100px" src="../img/搜索名片.jpg" width="50%"/>
 </div></p>
     </article>
 </section>
